    (Closes upstream issue: #74).
  * Follow-up commit for 302_nxagent_configurable-keystrokes.full.patch, fixes
    FTBFS problem with the first version of that patch.

  [ Mike Gabriel ]
  * Add README.keystrokes to doc section of bin:package nxagent.
  * Add libxml2-dev to build dependencies.
  * Add pkg-config to build dependencies.

  [ Orion Poplawski ]
  * Add patches: 026_nxcomp*_honour-optflags.full*.patch. (Closes upstream
    issue #84).

  [ Reinhard Tartler ]
  * Install debug symbols for all packages in a new binary package
    'nx-x11-dbg'.
  * Drop patch: 025_nxproxy_no-configure-file.full+lite.patch, instead remove
    file nxproxy/configure from the source tree.
  * Add roll-tarball.sh: replaces nx-tarballrelease script that could be
    found in nx-buildscripts branch of nx-libs.git. Use this script to
    create tarballs of nx-libs and nx-libs-lite.
  * Fix installation of libxcompext, thanks to Orion Paplowski for spotting
    this.
  * /debian/rules:
    + Integrate code from /debian/pre-build-nx.sh and drop the named file.
    + Disable parallel build of .deb packages.
  * /debian/control:
    + Rely on shlibs instead of hardcoded dependencies.
    + Drop xbitmaps from Build-Depends.
    + Move xfonts-base over to Recommends.
  * Update 031_nx-X11_parallel-make.full.patch. Add an explicit dependency
    from the NX libX11.so to the nxcomp libraries. Unbreaks parallel builds.
    (Fixes: #87).
  * Fix and greatly enhance the top-level install and uninstall target for
    plain makefile installs.

 -- Reinhard Tartler <siretart@tauware.de>  Sat, 15 Dec 2012 14:29:12 +0100

nx-libs (2:3.5.0.16-0) unstable; urgency=low

  * Fix installation of header files in Debian package.
  * Fix patch file names concerning component nx-X11.
  * Modify patch: 032_no-x11r6.full.patch. Install nx-X11 to /usr/local/lib/nx.
  * Add patch: 032_no-x11r6.debian.patch. Use /usr/lib/nx for nx-X11 on Debian.