@@ -1,2 +1,0 @@
-usr/include/nx/X11
-usr/include/nx/X11/extensions
