@@ -1,4 +1,3 @@
-nx-X11/.build-exports/include/*           usr/include/nx/
-nx-X11/include/extensions/Xinerama.h      usr/include/nx/X11/extensions/
+usr/include/nx
 
 
