@@ -1,4 +1,3 @@
-usr/lib/nx/X11
 usr/lib/nx/X11/Xinerama
 usr/lib/nx/X11/Xrandr
 usr/share/nx
