@@ -1,2 +1,3 @@
-nx-X11/.build-exports/lib/*                     usr/lib/nx/X11
-nx-X11/programs/Xserver/Xext/SecurityPolicy     usr/share/nx
+usr/lib/nx/lib*
+usr/lib/nx/X11
+usr/share/nx
